--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2424,8 +2424,8 @@ en:
 
     splash_screen: "Displays a temporary loading screen while site assets load"
     navigation_menu: "Determine which navigation menu to use. Sidebar and header navigation are customizable by users. Legacy option is available for backward compatibility."
-    default_sidebar_categories: "Selected categories will be displayed under Sidebar's Categories section by default."
-    default_sidebar_tags: "Selected tags will be displayed under Sidebar's Tags section by default."
+    default_navigation_menu_categories: "Selected categories will be displayed under Navigation Menu's Categories section by default."
+    default_navigation_menu_tags: "Selected tags will be displayed under Navigation Menu's Tags section by default."
     enable_experimental_hashtag_autocomplete: "EXPERIMENTAL: Use the new #hashtag autocompletion system for categories and tags that renders the selected item differently and has improved search"
     experimental_new_new_view_groups: 'EXPERIMENTAL: Enable a new topics list that combines unread and new topics and make the "Everything" link in the sidebar link to it.'
     enable_custom_sidebar_sections: "EXPERIMENTAL: Enable custom sidebar sections"
