--- a/plugins/chat/config/locales/client.en.yml
+++ b/plugins/chat/config/locales/client.en.yml
@@ -565,6 +565,13 @@ en:
           started_by: "Started by"
         settings: "Settings"
         last_reply: "last reply"
+        notifications:
+          regular:
+            title: "Normal"
+            description: "You will be notified if someone mentions your @name in this thread."
+          tracking:
+            title: "Tracking"
+            description: "A count of new replies for this thread will be shown in the thread list and the channel. You will be notified if someone mentions your @name in this thread."
         participants_other_count:
           one: "+%{count} other"
           other: "+%{count} others"
