FEATURE: Add modal for editing tags in navigation menu (#22214)
What does this change do?

This change is a first pass for adding a modal used to edit tags that appears in
the navigation menu. As the feature is being worked on in phases, it is
currently hidden behind the `new_edit_sidebar_categories_tags_interface_groups` site setting.

The following features will be worked on in future commits:

1. Input filter to filter through the tgas
2. Button to reset tag selection to default navigation menu tags site
   settings
3. Button to deselect all current selection

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4390,7 +4390,6 @@ en:
       all_categories: "All categories"
       all_tags: "All tags"
       categories_form_modal:
-        save: "Save"
         title: "Edit categories navigation"
         subtitle:
           button_text: "Deselect all"
@@ -4398,6 +4397,8 @@ en:
         filter_placeholder: "Filter categories"
         no_categories: "There are no categories matching the given term."
         reset_to_defaults: "Reset to defaults"
+      tags_form_modal:
+        title: "Edit tags navigation"
 
       sections:
         custom:
