FEATURE: Add input filter for editing tags in navigation menu modal (#22216)
What does this change do?

This commit adds an input filter to filter through the tag checkboxes in the
modal to edit tags that are shown in the user's navigation menu. The
filtering is a simple matching of the given filter term against the
names of the tags.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4399,6 +4399,8 @@ en:
         reset_to_defaults: "Reset to defaults"
       tags_form_modal:
         title: "Edit tags navigation"
+        filter_placeholder: "Filter tags"
+        no_tags: "There are no tags matching the given term."
 
       sections:
         custom:
