FEATURE: Add deslect all and reset to defaults btn edit nav menu modal (#22218)
What does this change do?

This change adds the deselect all and reset to defaults buttons to the
edit navigation menu tags modal. The deselect all button when
clicked deselects all the selected tags in the modal. If the user
saves with no tags selected, the user's tags section in the
navigation menu will be set to the site's top tags.

The reset to defaults button is only shown when the
`default_navigation_menu_tags` site setting has been configured.
When clicked, the user's tags section in the navigation menu is
automatically set to the tags defined by the
`default_navigation_menu_tags` site setting.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4401,6 +4401,10 @@ en:
         title: "Edit tags navigation"
         filter_placeholder: "Filter tags"
         no_tags: "There are no tags matching the given term."
+        subtitle:
+          button_text: "Deselect all"
+          text: "and we'll automatically show this site's top tags"
+        reset_to_defaults: "Reset to defaults"
 
       sections:
         custom:
