FEATURE: Export chat messages to CSV file (#22113)
To export chat messages, go to `/admin/plugins/chat` and click the Create export 
button in the _Export chat messages_ section. You'll receive a direct message 
when the export is finished.

Currently, this exports all messages from the last 6 months, but not more than 
10000 messages.

This exports all chat messages, including messages from private channels and 
users' direct conversations. This also exports messages that were deleted.

--- a/plugins/chat/config/locales/client.en.yml
+++ b/plugins/chat/config/locales/client.en.yml
@@ -120,7 +120,7 @@ en:
         description: "Select an option below to summarize the conversation sent during the desired timeframe."
         summarize: "Summarize"
         since:
-          one: "Last hour" 
+          one: "Last hour"
           other: "Last %{count} hours"
       mention_warning:
         dismiss: "dismiss"
@@ -451,6 +451,11 @@ en:
 
       admin:
         title: "Chat"
+        export_messages:
+          title: "Export chat messages"
+          description: "Export is currently limited to 10000 most recent messages in the last 6 months."
+          create_export: "Create export"
+          export_has_started: "The export has started. You'll receive a PM when it's ready."
 
       direct_messages:
         title: "Personal chat"
