--- a/plugins/chat/config/locales/client.en.yml
+++ b/plugins/chat/config/locales/client.en.yml
@@ -584,8 +584,8 @@ en:
             title: "Tracking"
             description: "A count of new replies for this thread will be shown in the thread list and the channel. You will be notified if someone mentions your @name in this thread."
         participants_other_count:
-          one: "+%{count} other"
-          other: "+%{count} others"
+          one: "+%{count}"
+          other: "+%{count}"
       threads:
         open: "Open Thread"
         list: "Ongoing discussions"
